--- a/src/package.json
+++ b/src/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "scoreboard",
+  "name": "name-that-tune",
   "version": "1.0.0",
+  "description": "Name That Tune app",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [],
   "author": "Dennis Witt",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "express": "^5.1.0",
     "ws": "^8.18.2"
