--- a/src/package.json
+++ b/src/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "name-that-tune",
-  "version": "1.0.0",
-  "description": "Name That Tune app",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "author": "Dennis Witt",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^5.1.0",
-    "ws": "^8.18.2"
-  }
+    "name": "name-that-tune",
+    "version": "1.0.0",
+    "description": "Name That Tune app",
+    "main": "server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "game": "node server.js"
+    },
+    "author": "Dennis Witt",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^5.1.0",
+        "ws": "^8.18.2"
+    }
 }
